In machine_learning_template.ipynb > Summary section: Update feature engineering summary and add emojis to section headers

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7773,7 +7773,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
-    "    <h2 style=\"margin:0px\">Data Preprocessing</h2>\n",
+    "    <h2 style=\"margin:0px\">🧹 Data Preprocessing</h2>\n",
     "</div> \n",
     "\n",
     "Used `pandas` and `sklearn` for data loading, cleaning, transformation, and saving.\n",
@@ -7790,11 +7790,8 @@
     "- **Train-validation-test split**:\n",
     "    - Split data into training (e.g., 70%), validation (15%), and test (15%) sets using `sklearn` `train_test_split`.\n",
     "- **Engineered new features**:\n",
-    "    - Derived categorical features from raw text columns using `pandas` `apply` with custom functions.\n",
-    "    - Derived numerical features from raw text columns using `pandas` `apply` with custom functions and `re` for numeric pattern matching.\n",
-    "    - Derived boolean features from raw text columns using `pandas` `apply` with `lambda` functions.\n",
-    "    - Derived numerical features from categorical text columns using target encoding.\n",
-    "    - Derived categorical features from categorical text columns using tiering with `pandas` `apply` and custom tier mapping dictionaries.\n",
+    "    - Derived categorical, numerical, and boolean features from raw text columns using `pandas` `apply` with custom functions.\n",
+    "    - Derived categorical and numerical features from categorical text columns using tiering and target encoding.\n",
     "- **Defined semantic type** for each column (numerical, categorical, boolean).\n",
     "- **Handled missing values**:\n",
     "    - Deleted rows with missing values using `pandas` `dropna`.\n",
@@ -7821,7 +7818,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
-    "    <h2 style=\"margin:0px\">Exploratory Data Analysis (EDA)</h2>\n",
+    "    <h2 style=\"margin:0px\">🔍 Exploratory Data Analysis (EDA)</h2>\n",
     "</div> \n",
     "\n",
     "Use `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
@@ -7847,7 +7844,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#3d7ab3; color:white; padding:12px; border-radius:6px; margin-bottom:8px;\">\n",
-    "    <h2 style=\"margin:0px\">Modeling</h2>\n",
+    "    <h2 style=\"margin:0px\">🏗️ Modeling</h2>\n",
     "</div> \n",
     "\n",
     "Use `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
