In machine_learning_template.ipynb > Summary section: Update EDA summary

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7821,21 +7821,25 @@
     "    <h2 style=\"margin:0px\">🔍 Exploratory Data Analysis (EDA)</h2>\n",
     "</div> \n",
     "\n",
-    "Use `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
+    "Used `pandas`, `numpy`, `seaborn`, and `matplotlib` for statistical analysis and visualizations.\n",
     "- **Univariate EDA**:\n",
     "    - **Numerical columns**:\n",
-    "        - Analyze descriptive statistics (e.g., mean, median, standard deviation) using `pandas` `describe`.\n",
-    "        - Visualize distributions with histograms using `seaborn` `histplot` and `matplotlib`.\n",
+    "        - Analyzed descriptive statistics (e.g., mean, median, standard deviation) using `pandas` `describe`.\n",
+    "        - Visualized distributions with histograms using `seaborn` `histplot` and `matplotlib`.\n",
     "    - **Categorical columns**:\n",
-    "        - Examine frequencies using `pandas` `value_counts`.\n",
-    "        - Visualize frequencies with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`). \n",
+    "        - Examined frequencies using `pandas` `value_counts`.\n",
+    "        - Visualized frequency distributions with bar plots using `seaborn` `barplot` and `matplotlib`. \n",
     "- **Bivariate EDA**:\n",
-    "    - **Two numerical columns**:\n",
-    "        - Analyze pairwise relationships with a correlation matrix (`pandas` `corr` and `numpy`) and visualize them with a heatmap (`seaborn` `heatmap`).\n",
-    "        - Visualize relationships with scatterplots (`seaborn` `scatterplot`) or a scatterplot matrix (`matplotlib` `subplot`).\n",
-    "    - **Numerical and categorical columns**:\n",
-    "        - Explore relationships with group-wise statistics (e.g., mean or median by category) using `pandas` `groupby` and `describe`.\n",
-    "        - Visualize results with bar plots (`seaborn` `barplot`) or a bar plot matrix (`matplotlib` `subplot`)."
+    "    - **Numerical vs. numerical**:\n",
+    "        - Analyzed pairwise relationships with a correlation matrix (`pandas` `corr` and `numpy`) and visualized them with a heatmap (`seaborn` `heatmap`).\n",
+    "        - Visualized relationships with scatterplots using `seaborn` `scatterplot` and `matplotlib`.\n",
+    "    - **Numerical vs. categorical**:\n",
+    "        - Explored relationships with group-wise statistics (e.g., mean or median by category) using `pandas` `groupby` and `agg`.\n",
+    "        - Quantified the magnitude of group differences with Cohen's d using a custom function.\n",
+    "        - Visualized results with bar plots using `seaborn` `barplot` and `matplotlib`.\n",
+    "    - **Categorical vs. categorical**:\n",
+    "        - Analyzed relationships with contingency tables using `pandas` `crosstab`.\n",
+    "        - Visualized relationships with grouped bar plots using `pandas` `crosstab` `plot` and `matplotlib`."
    ]
   },
   {
