In machine_learning_template.ipynb > Summary section: Update Modeling summary

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7851,25 +7851,31 @@
     "    <h2 style=\"margin:0px\">🏗️ Modeling</h2>\n",
     "</div> \n",
     "\n",
-    "Use `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
-    "- **Train baseline models**:\n",
-    "    - Establish performance benchmarks with the following models using `sklearn` and `xgboost`: Linear Regression, Logistic Regression, Elastic Net Regression, K-Nearest Neighbors, Support Vector Machine, Decision Tree, Random Forest, Multi-Layer Perceptron, and XGBoost.\n",
+    "Used `sklearn` and `xgboost` for model training, evaluation, and optimization.\n",
+    "- **Baseline models**:\n",
+    "    - Trained baseline models with default hyperparameter values.\n",
+    "    - Evaluated regression model performance using metrics and diagnostics:\n",
+    "        - Calculated RMSE, MAPE, and R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score`.\n",
+    "        - Analyzed errors with residual plots, error distributions, and feature-error relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
+    "    - Evaluated classification model performance using metrics and diagnostics:\n",
+    "        - Calculated accuracy (`sklearn` `accuracy_score`), recall (`recall_score`), precision (`precision_score`), F1-score (`f1_score`), ROC-AUC (`roc_auc_score`), and AUC-PR (`precision_recall_curve` and `auc`).\n",
+    "        - Compared metrics using tables with `pandas`.\n",
+    "        - Plotted precision-recall curves using `matplotlib`.\n",
+    "        - Created classification reports with `sklearn` `classification_report`.\n",
+    "        - Plotted confusion matrices with `sklearn` `confusion_matrix` and `ConfusionMatrixDisplay`.\n",
+    "        - Analyzed overfitting using custom tables (`pandas`) and plots (`seaborn` `barplot` and `matplotlib`).\n",
+    "        - Explored feature-misclassification relationships through correlations (`pandas` `corr`) and grouped box plots (`seaborn` `boxplot` and `matplotlib`).\n",
     "- **Hyperparameter tuning**:\n",
-    "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV` or random search with `RandomizedSearchCV`.\n",
-    "- **Model evaluation**:\n",
-    "    - Regression task:\n",
-    "        - Calculate metrics such as RMSE, MAPE, and R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score`.\n",
-    "        - Analyze errors with residual plots, error distributions, and feature-error relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
-    "    - Classification task:\n",
-    "        - Create classification report with metrics like accuracy, precision, recall, and F1-score using `sklearn` `classification_report`.\n",
-    "        - Analyze misclassifications using a confusion matrix with `sklearn` `confusion_matrix` and `ConfusionMatrixDisplay`.\n",
-    "        - Explore feature-misclassification relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
-    "- **Feature importance**:\n",
-    "    - Visualize feature importances using `seaborn` and `matplotlib` or `xgboost` `plot_importance`.\n",
-    "- **Model prediction examples**:\n",
-    "    - Show illustrative examples of model predictions with best, worst, and typical cases using `pandas`.\n",
-    "- **Save the final model**:\n",
-    "    - Save the best-performing model as a .pkl file using `pickle`."
+    "    - Performed grid search (`sklearn` `GridSearchCV`) or random search (`RandomizedSearchCV`) with 5-fold cross-validation on the most promising baseline models.\n",
+    "    - Retrained the best-performing model from each algorithm.\n",
+    "    - Classification models: Plotted precision-recall curves and optimized decision thresholds.\n",
+    "    - Evaluated all tuned models using the above metrics and diagnostics.\n",
+    "- **Final model**:\n",
+    "    - Selected Random Forest for its good performance (highest AUC-PR), low overfitting (lowest AUC-PR difference), and interpretability.\n",
+    "    - Retrained and saved the final model as a .pkl file using `pickle`.\n",
+    "    - Compared training, validation, and test performance using the above metrics and diagnostics.\n",
+    "    - Visualized feature importances using `seaborn` `barplot` and `matplotlib` or `xgboost` `plot_importance`.\n",
+    "    - Showed model prediction examples of the best, worst, and typical cases using `pandas`."
    ]
   },
   {
