--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -7856,9 +7856,10 @@
     "    - Trained baseline models with default hyperparameter values.\n",
     "    - Evaluated regression model performance using metrics and diagnostics:\n",
     "        - Calculated RMSE, MAPE, and R-squared with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, and `r2_score`.\n",
-    "        - Analyzed errors with residual plots, error distributions, and feature-error relationships using `pandas`, `seaborn`, and `matplotlib`.\n",
+    "        - Analyzed errors with residual plots and error distributions using `pandas` and `matplotlib`.\n",
+    "        - Explored feature-error relationships using scatter plots with `seaborn` `scatterplot` and `matplotlib`.\n",
     "    - Evaluated classification model performance using metrics and diagnostics:\n",
-    "        - Calculated accuracy (`sklearn` `accuracy_score`), recall (`recall_score`), precision (`precision_score`), F1-score (`f1_score`), ROC-AUC (`roc_auc_score`), and AUC-PR (`precision_recall_curve` and `auc`).\n",
+    "        - Calculated accuracy, recall, precision, F1-score, ROC-AUC, and AUC-PR with `sklearn` `accuracy_score`, `recall_score`, `precision_score`, `f1_score`, `roc_auc_score`, `precision_recall_curve`, and `auc`.\n",
     "        - Compared metrics using tables with `pandas`.\n",
     "        - Plotted precision-recall curves using `matplotlib`.\n",
     "        - Created classification reports with `sklearn` `classification_report`.\n",
