feat(data): add code to identify and remove duplicate rows based on all columns except ID

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -9,7 +9,8 @@
     "    Machine Learning Template\n",
     "    <p style=\"text-align:center; font-size:14px; font-weight:normal; color:#4A4A4A; margin-top:12px;\">\n",
     "        Author: Jens Bender <br> \n",
-    "        May 2025\n",
+    "        Created: November 2024<br>\n",
+    "        Last updated: January 2026\n",
     "    </p>\n",
     "</div>"
    ]
@@ -470,7 +471,12 @@
     "</div>\n",
     "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Identify and remove duplicates based on all columns.\n",
+    "    📌 Identify duplicates based on:\n",
+    "<ul>\n",
+    "    <li><strong>All columns</strong>: To detect exactly identical rows.</li>\n",
+    "    <li><strong>ID column only</strong>: To ensure that no two rows share the same ID.</li>\n",
+    "    <li><strong>All columns except ID</strong>: To catch \"hidden\" duplicates where the same sample may have been recorded twice under different IDs.</li>\n",
+    "</ul>\n",
     "</div>"
    ]
   },
@@ -534,7 +540,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Identify and remove duplicates based on a combination of specific columns.\n",
+    "    📌 Identify and remove duplicates based on all columns except the ID column.\n",
     "</div>"
    ]
   },
@@ -545,8 +551,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify duplicates based on a combination of specific columns\n",
-    "df.duplicated([\"column_1\", \"column_2\", \"column_3\"]).value_counts()"
+    "# Identify duplicates based on all columns except ID \n",
+    "df.duplicated(subset=df.columns.drop(\"id\"), keep=False).value_counts()"
    ]
   },
   {
@@ -557,7 +563,7 @@
    "outputs": [],
    "source": [
     "# Remove duplicates\n",
-    "df = df.drop_duplicates([\"column_1\", \"column_2\", \"column_3\"]).copy()"
+    "df = df.drop_duplicates(subset=df.columns.difference(['id'])).copy()"
    ]
   },
   {
