--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -180,18 +180,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Data Processing\n",
+    "# Standard Library \n",
+    "import pickle\n",
+    "\n",
+    "# Data Manipulation\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler, OneHotEncoder, OrdinalEncoder, PolynomialFeatures\n",
-    "from sklearn.compose import ColumnTransformer\n",
     "\n",
     "# Data Visualization\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Modeling\n",
+    "# Data Preprocessing (scikit-learn)\n",
+    "from sklearn.preprocessing import (\n",
+    "    StandardScaler, \n",
+    "    MinMaxScaler, \n",
+    "    OneHotEncoder, \n",
+    "    OrdinalEncoder, \n",
+    "    PolynomialFeatures\n",
+    ")\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "# Model Selection\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, RandomizedSearchCV\n",
+    "from scipy.stats import randint, uniform  # for random hyperparameter values\n",
+    "\n",
+    "# Models\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression, ElasticNet\n",
     "from sklearn.neighbors import KNeighborsRegressor, KNeighborsClassifier\n",
     "from sklearn.svm import SVR, SVC\n",
@@ -200,11 +214,15 @@
     "from sklearn.neural_network import MLPRegressor, MLPClassifier\n",
     "from xgboost import XGBRegressor, XGBClassifier\n",
     "import xgboost as xgb\n",
-    "import pickle\n",
     "\n",
-    "# Evaluation Metrics: Regression\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score\n",
-    "# Evaluation Metrics: Classification\n",
+    "# Model Evaluation: Regression\n",
+    "from sklearn.metrics import (\n",
+    "    mean_squared_error, \n",
+    "    mean_absolute_percentage_error, \n",
+    "    r2_score\n",
+    ")\n",
+    "\n",
+    "# Model Evaluation: Classification\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score,\n",
     "    recall_score,\n",
