docs(data): add explainer for Pandas missing values in notebook section for handling missing values

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1050,6 +1050,16 @@
     "    <h2 style=\"margin:0px\">Handling Missing Values</h2>\n",
     "</div>\n",
     "\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Pandas Missing Values:\n",
+    "    <ul style=\"margin-bottom:0px\">\n",
+    "        <li><b>np.nan</b>: Standard missing value indicator (technically a float); often the default in Pandas for numerical data.</li>\n",
+    "        <li><b>pd.NA</b>: Unified missing value indicator for modern nullable data types (mostly integer and boolean).</li>\n",
+    "        <li><b>None</b>: Python's native type; often used for object and string data.</li>\n",
+    "        <li><b>pd.NaT</b>: For datetime and timedelta data types.</li>\n",
+    "    </ul>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Identification</strong> <br>\n",
     "    📌 Identify missing values.\n",
