--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -593,6 +593,21 @@
     "    <h2 style=\"margin:0px\">Handling Data Types</h2>\n",
     "</div>\n",
     "\n",
+    "<div style=\"background-color:#e8f4fd; padding:15px; border:3px solid #d0e7fa; border-radius:6px;\">\n",
+    "    ℹ️ Considerations:\n",
+    "    <ul>\n",
+    "        <li><b>ID</b>: Consider storing the ID column as a <code>string</code>. It is an identifier, not a quantity. This prevents unintended math with IDs, losing leading zeros (e.g., 00123) if stored as integers, and ensures consistent behavior when merging with other datasets.</li>\n",
+    "        <li><b>Integer Features</b>: Consider storing all integer features as <code>float</code>. This includes not only numerical features but also categorical features that are stored as integers (e.g., 1=Male, 2=Female). There are three practical reasons for this:\n",
+    "            <ul>\n",
+    "                <li>Missing Value Compatibility: In standard Pandas, <code>np.nan</code> is a floating-point object. Assigning it to an integer column automatically casts back to <code>float64</code>.</li>\n",
+    "                <li>Data Preprocessing Consistency: scikit-learn transformers (e.g., <code>SimpleImputer</code>, <code>StandardScaler</code>) internally use floats and automatically convert numerical inputs to <code>float</code>, even when using <code>set_config(transform_output=\"pandas\")</code>. Keeping them as floats avoids redundant type casting.</li>\n",
+    "                <li>Model Consistency: Most machine learning models (e.g., Linear Regression, XGBoost) internally use floats and automatically convert numerical inputs to <code>float</code> during training and inference. Keeping them as floats avoids redundant type casting.</li>\n",
+    "            </ul>\n",
+    "        </li>\n",
+    "        <li><b>Target Variable</b>: Consider storing the target variable as a <code>float</code>. Machine learning models deliver <code>float</code> predictions during training and inference. Keeping the target variable as a <code>float</code> avoids redundant type casting.</li>\n",
+    "    </ul>\n",
+    "</div>\n",
+    "\n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Identify and convert incorrect storage data types.\n",
     "</div>"
